--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.9.1", features = ["dynamic"] }
+bevy_egui = "0.18.0"
 
 [workspace]
 resolver = "2" # Important! wgpu/Bevy needs this!
